--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <p>I am a passionate web developer with experience in building responsive websites
             </p>
             <div class="btn-box">
-                <a href="img/resume(4).pdf" target="_blank" class="btn d-CV">Download CV <i
+                <a href="img/Nousheen-banu_Resume.pdf" target="_blank" class="btn d-CV">Download CV <i
                         class='bx bx-download'></i></a>
             </div>
 
@@ -71,7 +71,7 @@
         </div>
 
         <div class="img-hero">
-            <img src="img/Untitled design (3).png" alt="">
+            <img src="img/profile.png" alt="">
             <div class="text">
                 <p></p>
             </div>
@@ -191,7 +191,7 @@
                     <a href="https://nousheenbushra03.github.io/Weather--app/" class="readMore">Live</a>
                 </div>
                 <div class="portfolio-img">
-                    <img src="img/portfolio/weather.png" alt="">
+                    <img src="img/weather.png" alt="">
                 </div>
             </div>
 
@@ -210,7 +210,7 @@
                     <a href="https://nousheenbushra03.github.io/ECommerce-Website-4/" class="readMore">Live</a>
                 </div>
                 <div class="portfolio-img">
-                    <img src="img/portfolio/E-comm.png" alt="">
+                    <img src="img/E-comm.png" alt="">
                 </div>
             </div>
         </div>
