--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
 
             <div class="portfolio-box mix web">
-                <div class="portfolio-content">
+          s      <div class="portfolio-content">
                     <h3>E-commerce Website</h3>
                     <p>The E-commerce Website project successfully delivered a user-friendly online shopping platform,
                         resulting in increased user engagement and satisfaction.
